# eoapi-cdk

./: .gitignore  .npmignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile.stac  README.md  docker-compose.yml  index.md  package-lock.json  package.json  pyproject.toml  release-please-config.json  ruff.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-pr.yaml  build.yaml  build_and_release.yaml  cdk-compat.yaml  conventional-pr.yaml  deploy.yaml  distribute.yaml  docs.yaml  integration-test.yaml  lint.yaml  python_test.yaml  release-please.yml  test.yaml  tox.yaml  unit-tests.yaml  update-pgbouncer-ami.yaml
diagrams/: bastion_diagram.excalidraw  ingestor_diagram.excalidraw
integration_tests/cdk/: README.md  app.py  cdk.json  config.py  package-lock.json  package.json  requirements.txt
integration_tests/cdk/eoapi_template/: pgStacInfra.py  vpc.py
integration_tests/tests/eoapi_tests/fixtures/: test_collection.json  test_titiler_search_request.json
lib/: database.ts  index.ts
lib/bastion-host/: index.ts
lib/bootstrap-pgstac/: index.ts
lib/bootstrap-pgstac/runtime/: handler.py
lib/bootstrapper/: index.ts  insert-test-data.py
lib/bootstrapper/runtime/: Dockerfile  handler.py
lib/database/: PatchManager.ts  PgBouncer.ts  index.ts  instance-memory.json  pgbouncer-setup.sh
lib/database/bootstrapper_runtime/: Dockerfile  handler.py
lib/database/lambda/: package-lock.json  package.json
lib/database/lambda/pgbouncer-health-check/: health-check.sh  index.ts
lib/database/lambda/pgbouncer-secret-updater/: index.ts
lib/ingestor-api/: index.ts
lib/ingestor-api/runtime/: Dockerfile  dev_requirements.txt  pyproject.toml  requirements.txt
lib/ingestor-api/runtime/src/: collection.py  config.py  dependencies.py  handler.py  ingestor.py  loader.py  main.py  schemas.py  services.py  utils.py  validators.py  vedaloader.py
lib/ingestor-api/runtime/tests/: conftest.py  test_collection.py  test_collection_endpoint.py  test_config.py  test_ingestor.py  test_registration.py  test_utils.py  test_validators.py
lib/lambda-api-gateway/: index.ts
lib/lambda-api-gateway-private/: index.ts
lib/stac-api/: index.ts
lib/stac-api/runtime/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
lib/stac-api/runtime/src/: app.py  config.py  handler.py
lib/stac-api/runtime/src/stac_api/: handler.py
lib/stac-auth-proxy/: index.ts
lib/stac-auth-proxy/runtime/: Dockerfile  pyproject.toml  requirements.txt
lib/stac-auth-proxy/runtime/src/: handler.py
lib/stac-auth-proxy/runtime/src/stac_auth_proxy_api/: handler.py
lib/stac-browser/: index.ts
lib/stac-item-generator/: index.ts
lib/stac-item-generator/runtime/: Dockerfile  pyproject.toml
lib/stac-item-generator/runtime/src/stac_item_generator/: handler.py
lib/stac-item-generator/runtime/tests/: test_item.py  test_item_gen_handler.py
lib/stac-item-loader/: index.ts
lib/stac-item-loader/runtime/: Dockerfile  pyproject.toml
lib/stac-item-loader/runtime/src/stac_item_loader/: handler.py
lib/stac-item-loader/runtime/tests/: conftest.py  test_item_load_handler.py
lib/stac-loader/: index.ts
lib/stac-loader/runtime/: Dockerfile  pyproject.toml
lib/stac-loader/runtime/src/stac_loader/: handler.py
lib/stac-loader/runtime/tests/: conftest.py  test_stac_loader_handler.py
lib/stactools-item-generator/: index.ts
lib/stactools-item-generator/runtime/: Dockerfile  pyproject.toml
lib/stactools-item-generator/runtime/src/stactools_item_generator/: __init__.py  handler.py  item.py
lib/stactools-item-generator/runtime/tests/: test_item.py  test_item_gen_handler.py
lib/tipg-api/: index.ts
lib/tipg-api/runtime/: Dockerfile  pyproject.toml  requirements.txt
lib/tipg-api/runtime/src/: __init__.py  handler.py  utils.py
lib/tipg-api/runtime/src/tipg_api/: handler.py
lib/titiler-pgstac-api/: index.ts
lib/titiler-pgstac-api/runtime/: Dockerfile  dev_requirements.txt  pyproject.toml  requirements.txt
lib/titiler-pgstac-api/runtime/src/: .env  config.py  handler.py  utils.py
lib/titiler-pgstac-api/runtime/src/titiler_pgstac_api/: handler.py
lib/utils/: index.ts  utils.py
tests/: README.md  pyproject.toml
tests/eoapi_tests/: conftest.py  ingestion.py  settings.py  test_stac_ingestion.py
tests/eoapi_tests/fixtures/: test_item.json
