[project]
name = "eoapi-cdk"
version = "0.0"
requires-python = ">=3.12"
dependencies = [
    "stac-api",
    "tipg-api",
    "titiler-pgstac-api",
    "stac-loader",
    "stactools-item-generator",
]

[tool.uv.sources]
stactools-item-generator = { path = "lib/stactools-item-generator/runtime" }
stac-loader = { path = "lib/stac-loader/runtime" }
tipg-api = { path = "lib/tipg-api/runtime" }
titiler-pgstac-api = { path = "lib/titiler-pgstac-api/runtime" }
stac-api = { path = "lib/stac-api/runtime" }


[dependency-groups]
deploy = [
    "aws-cdk-lib==2.220.0",
    "constructs==10.3.0",
    "pydantic>=2.11.5",
    "pydantic-settings[yaml]>=2.8.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]
dev = [
    "aws-lambda-typing>=2.20.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-postgresql>=7.0.1",
]

[tool.pytest.ini_options]
addopts = "-vv --ignore=cdk.out --no-header --tb=native"
pythonpath = "."
testpaths = [
    "lib/stactools-item-generator/runtime/tests",
    "lib/stac-loader/runtime/tests",
]


[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "F",    # flake8
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "I001", # isort
]

ignore = [
    "E203",
    "E266",
    "F403",
    "E231",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # ignore zip() without an explicit strict= parameter
]

[tool.ruff.lint.mccabe]
max-complexity = 18
