[project]
name = "ingestor-api"
version = "0.0.0"
description = "ingestor-api runtime"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.3",
    "boto3",
    "cachetools>=5.0",
    "fastapi>=0.110",
    "mangum==0.19",
    "orjson>=3.9",
    "psycopg[binary,pool]>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ssm-settings>=1.0,<2.0",
    "pypgstac",
    "requests>=2.27",
    "stac-pydantic>=3.0,<4.0",
]

[dependency-groups]
dev = [
    "boto3",
    "httpx>=0.24",
    "moto[dynamodb,ssm]>=4.0,<5.0",
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
