[project]
name = "stac-api"
version = "0.1.0"
description = "stac-api runtime"
authors = [{ name = "hrodmn", email = "henry@developmentseed.org" }]
requires-python = ">=3.12"
dependencies = [
    "stac-fastapi-pgstac[awslambda]>=6.0,<6.1",
    "starlette-cramjam>=0.4,<0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
