[project]
name = "stac-api"
version = "0.0.0"
description = "stac-api runtime"
authors = [{ name = "hrodmn", email = "henry@developmentseed.org" }]
requires-python = ">=3.12"
dependencies = [
    "mangum==0.19",
    "stac-fastapi-pgstac[awslambda]>=6.0,<6.1",
    "starlette-cramjam>=0.4,<0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
