[project]
name = "titiler-pgstac-api"
version = "0.0.0"
description = "titiler-pgstac-api runtime"
requires-python = ">=3.12"
dependencies = [
    "titiler-pgstac[psycopg-binary]>=1.9.0,<1.10",
    "mangum==0.19",
]

[dependency-groups]
dev = [
    "boto3>=1.40.64",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
