[project]
name = "titiler-pgstac-api"
version = "0.0.0"
description = "titiler-pgstac-api runtime"
requires-python = ">=3.12"
dependencies = [
    "mangum==0.19",
    "titiler-pgstac[psycopg-binary]>=2.0.0,<2.1.0",
]

[dependency-groups]
dev = [
    "boto3>=1.40.64",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
